--- a/SimpleWeather.Shared/Resources/Strings/Resources.es.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.es.resx
@@ -803,4 +803,29 @@ Fuzzy</comment>
   <data name="copyright_apple_weather" xml:space="preserve">
     <value>Apple Weather and (Apple) Weather are trademarks of Apple Inc.</value>
   </data>
+  <data name="pref_title_minalertseverity" xml:space="preserve">
+    <value>Severidad mínima de la alerta</value>
+    <comment>Minimum Alert Severity</comment>
+  </data>
+  <data name="alertsev_all" xml:space="preserve">
+    <value>Ninguna (Mostrar todas las descripciones)</value>
+  </data>
+  <data name="alertsev_moderate" xml:space="preserve">
+    <value>Moderado</value>
+  </data>
+  <data name="alertsev_severe" xml:space="preserve">
+    <value>Severo</value>
+  </data>
+  <data name="alertsev_extreme" xml:space="preserve">
+    <value>Extremo</value>
+  </data>
+  <data name="api_google" xml:space="preserve">
+    <value>Google</value>
+  </data>
+  <data name="label_moreinfo" xml:space="preserve">
+    <value>Más información</value>
+  </data>
+  <data name="action_reset" xml:space="preserve">
+    <value>Restablecer</value>
+  </data>
 </root>
