--- a/SimpleWeather.Shared/Resources/Strings/Resources.pl.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.pl.resx
@@ -788,4 +788,29 @@ Fuzzy</comment>
   <data name="copyright_apple_weather" xml:space="preserve">
     <value>Apple Weather and (Apple) Weather are trademarks of Apple Inc.</value>
   </data>
+  <data name="pref_title_minalertseverity" xml:space="preserve">
+    <value>Minimalny poziom ważności alertu</value>
+    <comment>Minimum Alert Severity</comment>
+  </data>
+  <data name="alertsev_all" xml:space="preserve">
+    <value>Brak (Pokaż wszystkie alerty)</value>
+  </data>
+  <data name="alertsev_moderate" xml:space="preserve">
+    <value>Umiarkowany</value>
+  </data>
+  <data name="alertsev_severe" xml:space="preserve">
+    <value>Ciężki</value>
+  </data>
+  <data name="alertsev_extreme" xml:space="preserve">
+    <value>Ekstremalny</value>
+  </data>
+  <data name="api_google" xml:space="preserve">
+    <value>Google</value>
+  </data>
+  <data name="label_moreinfo" xml:space="preserve">
+    <value>Więcej informacji</value>
+  </data>
+  <data name="action_reset" xml:space="preserve">
+    <value>Resetuj</value>
+  </data>
 </root>
