--- a/SimpleWeather.Shared/Resources/Strings/Resources.zh-Hans.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.zh-Hans.resx
@@ -805,4 +805,35 @@ Fuzzy</comment>
   <data name="copyright_apple_weather" xml:space="preserve">
     <value>Apple Weather and (Apple) Weather are trademarks of Apple Inc.</value>
   </data>
+  <data name="pref_title_minalertseverity" xml:space="preserve">
+    <value>最低警报严重程度</value>
+    <comment>Minimum Alert Severity
+Fuzzy</comment>
+  </data>
+  <data name="alertsev_all" xml:space="preserve">
+    <value>无（显示所有警报）</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="alertsev_moderate" xml:space="preserve">
+    <value>中度</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="alertsev_severe" xml:space="preserve">
+    <value>严重</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="alertsev_extreme" xml:space="preserve">
+    <value>极端</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="api_google" xml:space="preserve">
+    <value>Google</value>
+  </data>
+  <data name="label_moreinfo" xml:space="preserve">
+    <value>更多信息</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="action_reset" xml:space="preserve">
+    <value>重置</value>
+  </data>
 </root>
