--- a/SimpleWeather.Shared/Resources/Strings/Resources.nl.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.nl.resx
@@ -783,4 +783,29 @@ Fuzzy</comment>
   <data name="copyright_apple_weather" xml:space="preserve">
     <value>Apple Weather and (Apple) Weather are trademarks of Apple Inc.</value>
   </data>
+  <data name="pref_title_minalertseverity" xml:space="preserve">
+    <value>Minimumwaarschuwingsniveau</value>
+    <comment>Minimum Alert Severity</comment>
+  </data>
+  <data name="alertsev_all" xml:space="preserve">
+    <value>Geen (toon alle waarschuwingen)</value>
+  </data>
+  <data name="alertsev_moderate" xml:space="preserve">
+    <value>Matig</value>
+  </data>
+  <data name="alertsev_severe" xml:space="preserve">
+    <value>Ernstig</value>
+  </data>
+  <data name="alertsev_extreme" xml:space="preserve">
+    <value>Extreem</value>
+  </data>
+  <data name="api_google" xml:space="preserve">
+    <value>Google</value>
+  </data>
+  <data name="label_moreinfo" xml:space="preserve">
+    <value>Meer informatie</value>
+  </data>
+  <data name="action_reset" xml:space="preserve">
+    <value>Resetten</value>
+  </data>
 </root>
