weather-api: add support for BrightSky (DWD)

--- a/SimpleWeather.Shared/Resources/Strings/Config.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Config.resx
@@ -218,4 +218,11 @@
     "newWeatherSource": ""
 }</value>
   </data>
+  <data name="dwd" xml:space="preserve">
+    <value>{
+    "enabled": true,
+    "locSource": "Bing",
+    "newWeatherSource": ""
+}</value>
+  </data>
 </root>
