weather-api: add support for ECCC (Canada)

--- a/SimpleWeather.Shared/Resources/Strings/ConfigiOS.resx
+++ b/SimpleWeather.Shared/Resources/Strings/ConfigiOS.resx
@@ -225,4 +225,11 @@
         "newWeatherSource": ""
 }</value>
   </data>
+  <data name="eccc" xml:space="preserve">
+    <value>{
+    "enabled": true,
+    "locSource": "Bing",
+    "newWeatherSource": ""
+}</value>
+  </data>
 </root>
