--- a/SimpleWeather.Shared/Resources/Strings/MoonPhases.pl.resx
+++ b/SimpleWeather.Shared/Resources/Strings/MoonPhases.pl.resx
@@ -141,4 +141,28 @@
   <data name="moonphase_wancrescent" xml:space="preserve">
     <value>Sierp ubywający</value>
   </data>
+  <data name="moonphase_new_short" xml:space="preserve">
+    <value>Nów</value>
+  </data>
+  <data name="moonphase_waxcrescent_short" xml:space="preserve">
+    <value>Przyb.</value>
+  </data>
+  <data name="moonphase_firstqtr_short" xml:space="preserve">
+    <value>1 kw.</value>
+  </data>
+  <data name="moonphase_waxgibbous_short" xml:space="preserve">
+    <value>Przyb.</value>
+  </data>
+  <data name="moonphase_full_short" xml:space="preserve">
+    <value>Pełnia</value>
+  </data>
+  <data name="moonphase_wangibbous_short" xml:space="preserve">
+    <value>Ubyw.</value>
+  </data>
+  <data name="moonphase_lastqtr_short" xml:space="preserve">
+    <value>3 kw.</value>
+  </data>
+  <data name="moonphase_wancrescent_short" xml:space="preserve">
+    <value>Ubyw.</value>
+  </data>
 </root>
