--- a/SimpleWeather.Shared/Resources/Strings/MoonPhases.resx
+++ b/SimpleWeather.Shared/Resources/Strings/MoonPhases.resx
@@ -141,4 +141,28 @@
   <data name="moonphase_wancrescent" xml:space="preserve">
     <value>Waning Crescent</value>
   </data>
+  <data name="moonphase_new_short" xml:space="preserve">
+    <value>New</value>
+  </data>
+  <data name="moonphase_waxcrescent_short" xml:space="preserve">
+    <value>Waxing</value>
+  </data>
+  <data name="moonphase_firstqtr_short" xml:space="preserve">
+    <value>First Q</value>
+  </data>
+  <data name="moonphase_waxgibbous_short" xml:space="preserve">
+    <value>Waxing</value>
+  </data>
+  <data name="moonphase_full_short" xml:space="preserve">
+    <value>Full</value>
+  </data>
+  <data name="moonphase_wangibbous_short" xml:space="preserve">
+    <value>Waning</value>
+  </data>
+  <data name="moonphase_lastqtr_short" xml:space="preserve">
+    <value>Last Q</value>
+  </data>
+  <data name="moonphase_wancrescent_short" xml:space="preserve">
+    <value>Waning</value>
+  </data>
 </root>
