--- a/SimpleWeather.Shared/Resources/Strings/Resources.es.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.es.resx
@@ -828,4 +828,13 @@ Fuzzy</comment>
   <data name="action_reset" xml:space="preserve">
     <value>Restablecer</value>
   </data>
+  <data name="api_brightsky" xml:space="preserve">
+    <value>Bright Sky (DWD)</value>
+  </data>
+  <data name="api_eccc" xml:space="preserve">
+    <value>Environment and Climate Change Canada (ECCC)</value>
+  </data>
+  <data name="werror_ratelimited" xml:space="preserve">
+    <value>Demasiadas solicitudes. Vuelva a intentarlo pasados unos minutos</value>
+  </data>
 </root>
