--- a/SimpleWeather.Shared/Resources/Strings/Resources.fr.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.fr.resx
@@ -809,4 +809,13 @@ Fuzzy</comment>
   <data name="action_reset" xml:space="preserve">
     <value>Réinitialiser</value>
   </data>
+  <data name="api_brightsky" xml:space="preserve">
+    <value>Bright Sky (DWD)</value>
+  </data>
+  <data name="api_eccc" xml:space="preserve">
+    <value>Environment and Climate Change Canada (ECCC)</value>
+  </data>
+  <data name="werror_ratelimited" xml:space="preserve">
+    <value>Trop de demandes. Veuillez réessayer après quelques minutes</value>
+  </data>
 </root>
