--- a/SimpleWeather.Shared/Resources/Strings/Resources.sk.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.sk.resx
@@ -809,4 +809,13 @@ Fuzzy</comment>
   <data name="action_reset" xml:space="preserve">
     <value>Resetovať</value>
   </data>
+  <data name="api_brightsky" xml:space="preserve">
+    <value>Bright Sky (DWD)</value>
+  </data>
+  <data name="api_eccc" xml:space="preserve">
+    <value>Environment and Climate Change Canada (ECCC)</value>
+  </data>
+  <data name="werror_ratelimited" xml:space="preserve">
+    <value>Príliš veľa požiadaviek. Prosím, skúste to znova po niekoľkých minútach</value>
+  </data>
 </root>
