--- a/SimpleWeather.Shared/Resources/Strings/Resources.zh-Hans.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.zh-Hans.resx
@@ -836,4 +836,13 @@ Fuzzy</comment>
   <data name="action_reset" xml:space="preserve">
     <value>重置</value>
   </data>
+  <data name="api_brightsky" xml:space="preserve">
+    <value>Bright Sky (DWD)</value>
+  </data>
+  <data name="api_eccc" xml:space="preserve">
+    <value>Environment and Climate Change Canada (ECCC)</value>
+  </data>
+  <data name="werror_ratelimited" xml:space="preserve">
+    <value>请求太多。请几分钟后再试一次</value>
+  </data>
 </root>
