SimpleWeather: prepare for BingMaps shutdown
* BingMaps will shut down on June 30, 2025
* Limit BingMaps usage in preparation
* Add MapBox and OpenStreetMap as the alternate base map for Windows
* Add Radar.com as a location provider

--- a/SimpleWeather.Shared/Resources/Strings/Config.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Config.resx
@@ -232,4 +232,13 @@
     "newWeatherSource": ""
 }</value>
   </data>
+  <data name="mapbox" xml:space="preserve">
+    <value>{"enabled":true,"locSource":"","newWeatherSource":""}</value>
+  </data>
+  <data name="osm" xml:space="preserve">
+    <value>{"enabled":true,"locSource":"","newWeatherSource":""}</value>
+  </data>
+  <data name="radar" xml:space="preserve">
+    <value>{"enabled":true,"locSource":"","newWeatherSource":""}</value>
+  </data>
 </root>
