weather-api: remove BingMaps
* Discontinued as of June 30, 2025

--- a/SimpleWeather.Shared/Resources/Strings/Config.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Config.resx
@@ -120,14 +120,14 @@
   <data name="accuweather" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "accuweather",
         "newWeatherSource": ""
 }</value>
   </data>
   <data name="apple" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "radar",
         "newWeatherSource": ""
 }</value>
   </data>
@@ -137,77 +137,77 @@
   <data name="google" xml:space="preserve">
     <value>{
     "enabled": true,
-    "locSource": "Bing",
+    "locSource": "radar",
     "newWeatherSource": ""
 }</value>
   </data>
   <data name="Here" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "radar",
         "newWeatherSource": ""
 }</value>
   </data>
   <data name="meteofrance" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "weatherapi",
         "newWeatherSource": ""
 }</value>
   </data>
   <data name="Metno" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "weatherapi",
         "newWeatherSource": ""
 }</value>
   </data>
   <data name="NWS" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "radar",
         "newWeatherSource": ""
 }</value>
   </data>
-  <data name="OpenWeather" xml:space="preserve">
+  <data name="openweather" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "weatherapi",
         "newWeatherSource": ""
 }</value>
   </data>
   <data name="openweather_onecall" xml:space="preserve">
     <value>{
     "enabled": true,
-    "locSource": "Bing",
+    "locSource": "weatherapi",
     "newWeatherSource": ""
 }</value>
   </data>
   <data name="tomorrowio" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "weatherapi",
         "newWeatherSource": ""
 }</value>
   </data>
   <data name="weatherapi" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "radar",
         "newWeatherSource": ""
 }</value>
   </data>
   <data name="weatherbitio" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "radar",
         "newWeatherSource": ""
 }</value>
   </data>
   <data name="wunlocked" xml:space="preserve">
     <value>{
         "enabled": true,
-        "locSource": "Bing",
+        "locSource": "radar",
         "newWeatherSource": ""
 }</value>
   </data>
@@ -221,14 +221,14 @@
   <data name="dwd" xml:space="preserve">
     <value>{
     "enabled": true,
-    "locSource": "Bing",
+    "locSource": "radar",
     "newWeatherSource": ""
 }</value>
   </data>
   <data name="eccc" xml:space="preserve">
     <value>{
     "enabled": true,
-    "locSource": "Bing",
+    "locSource": "radar",
     "newWeatherSource": ""
 }</value>
   </data>
@@ -240,5 +240,14 @@
   </data>
   <data name="radar" xml:space="preserve">
     <value>{"enabled":true,"locSource":"","newWeatherSource":""}</value>
+  </data>
+  <data name="Bing" xml:space="preserve">
+    <value>{"enabled":false,"locSource":"","newWeatherSource":""}</value>
+  </data>
+  <data name="google_pollen" xml:space="preserve">
+    <value>{ "enabled": false, "locSource": "radar", "newWeatherSource": "" }</value>
+  </data>
+  <data name="Yahoo" xml:space="preserve">
+    <value>{ "enabled": false, "locSource": "weatherapi", "newWeatherSource": "Metno" }</value>
   </data>
 </root>
